# SmartPortCam

./: README.md  VehicleDimension.msg  running.txt
install/: local_setup.sh  setup.sh
install/dimension_estimator/lib/dimension_estimator/: dimension_estimator
install/dimension_estimator/share/dimension_estimator/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dimension_gui/lib/dimension_gui/: dimension_gui
install/dimension_gui/share/dimension_gui/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/realsense2_camera/include/: align_depth_filter.h  base_realsense_node.h  constants.h  dynamic_params.h  gl_window.h  image_publisher.h  named_filter.h  pointcloud_filter.h  profile_manager.h  realsense_node_factory.h  ros_node_base.h  ros_param_backend.h  ros_sensor.h  ros_utils.h  sensor_params.h
install/realsense2_camera/lib/realsense2_camera/: realsense2_camera_node
install/realsense2_camera/share/realsense2_camera/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/realsense2_camera_msgs/share/realsense2_camera_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/realsense2_description/share/realsense2_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/tariff_calculator/lib/tariff_calculator/: tariff_calculator
install/tariff_calculator/share/tariff_calculator/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/yolov8_detector/share/yolov8_detector/: package.bash  (+5 more)
log/: latest_build
scripts/: smartport_mode.py
src/dimension_estimator/: package.xml  setup.cfg  setup.py
src/dimension_estimator/dimension_estimator/: dimension_estimator.py
src/dimension_gui/: package.xml  setup.cfg  setup.py
src/dimension_gui/dimension_gui/: dimension_gui.py
src/tariff_calculator/: package.xml  setup.cfg  setup.py
src/tariff_calculator/tariff_calculator/: __init__.py  tariff_calculator.py
src/tariff_calculator/test/: test_tariff_rules.py
src/vehicle_dimension_msgs/: CMakeLists.txt  package.xml
src/vehicle_dimension_msgs/msg/: VehicleBoundingBox.msg
src/yolov8_detector/: setup.py
src/yolov8_detector/yolov8_detector/: yolov8_detector.py
(+362 files in other folders)
