<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dimension_estimator</name>
  <version>0.1.0</version>
  <description>Estimate 3D vehicle dimensions from YOLO and RealSense data.</description>
  <maintainer email="ais@todo.todo">ais</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>numpy</depend>
  <depend>open3d</depend>
  <depend>pyrealsense2</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>vehicle_dimension_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
