<?xml version="1.0"?>
<package format="3">
  <name>tariff_calculator</name>
  <version>0.1.0</version>
  <description>Node ROS 2 untuk klasifikasi kendaraan dan perhitungan tarif otomatis.</description>
  <maintainer email="ais@todo.todo">ais</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>vehicle_dimension_msgs</depend>

  <test_depend>ament_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
